# fast-dualis-notifier

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs
