[package]
name = "fast-dualis-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.7.0"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "3.0.0"
webhook = "2.1.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
urlencoding = "2.1.2"
table-extract = "0.2.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"