[package]
name = "fast-dualis-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.7.0"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
urlencoding = "2.1.2"
itertools = "0.10.5"
table-extract = "0.2.2"

[[bin]]
name = "fast-dualis-notifier"
path = "src/main.rs"